--- a/src/styles/geecss/functions/_functions.scss
+++ b/src/styles/geecss/functions/_functions.scss
@@ -1,3 +1,7 @@
 @function is-even($num) {
   @return $num % 2 == 0;
 }
+
+@function is-integer($num) {
+  @return $num == round($num);
+}
